--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <div id="result" class="hidden">
     <p id="score-text"></p>
     <div id="ranking"></div>
+    <div id="kotae"></div>
   </div>
 
   <script type="module" src="script.js"></script>
